Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocBooleanValue.css
/* Style applied to the BocBooleanValue. */

.bocBooleanValue
{
  display: inline-flex;
  align-items: center;
  border: var(--remotion-themed-border-placeholder);
  border-radius: var(--remotion-themed-border-radius);
  box-sizing: border-box;
  vertical-align: middle;
}

.bocBooleanValue span[role=checkbox]
{
  display: inline-flex;
  align-items: center;
  margin-left: var(--remotion-themed-spacing);
  margin-right: var(--remotion-themed-spacing);
}

.bocBooleanValue span[role=checkbox]:focus
{
  outline: none;
}

.bocBooleanValue span[role=checkbox]:hover
{
  cursor: default;
}

.bocBooleanValue span.description
{
  align-items: center;
  margin-right: var(--remotion-themed-spacing);
}

.bocBooleanValue span.description:not([hidden])
{
  display: inline-flex;
}

.bocBooleanValue.readOnly span.description
{
  margin-left: var(--remotion-themed-spacing);
}

.bocBooleanValue.readOnly span.description[hidden]
{
  display: inline;
  overflow: hidden;
  width: 0;
  padding-left: var(--remotion-themed-spacing-large);
}

.bocBooleanValue img
{
  height: var(--remotion-themed-img-width);
  width: var(--remotion-themed-img-width);
}

.bocBooleanValue:not(.readOnly, .disabled):focus-within
{
  background-color: var(--remotion-themed-background-color-focus);
  border: var(--remotion-themed-border-focus);
  box-shadow: var(--remotion-themed-box-shadow-focus);
}

.bocBooleanValue.readOnly:focus-within
{
  border: var(--remotion-themed-border-readonly-focus);
  background-color: var(--remotion-themed-background-color-readonly-focus);
  box-shadow: var(--remotion-themed-box-shadow-readonly-focus);
}

.bocBooleanValue:not(.readOnly, .disabled):hover
{
  cursor: pointer;
}

.bocBooleanValue.disabled span.description
{
  color: var(--color-disabled-text);
}

